--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /SimuladorSmail/JavaApplication50/nbproject/private/
 /nbproject/private/
 /SimuladorSmail/build/
+/SimuladorSmail/nbproject/private/
